[package]
name = "pure-wasm"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
unleash-yggdrasil = {path = "../unleash-yggdrasil", default-features = false}
getrandom = { version = "0.2", features = ["custom"] }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
unleash-types = {path = "../../unleash-domain/unleash-types-rs", default-features = false}
rand = "0.8.5"