[package]
name = "pure-wasm"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "unwind"

[lib]
crate-type = ["cdylib"]

[dependencies]
unleash-yggdrasil = {path = "../unleash-yggdrasil", default-features = false}
getrandom = { version = "0.3" }
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
unleash-types = {version = "0.15.11", default-features = false}
rand = "0.9.1"
flatbuffers = "23.5.26"
