[tool.poetry]
name = "yggdrasil-engine"
version = "1.0.0"
description = "Engine for evaluating Unleash feature flags"
authors = ["Simon Hornby <liquidwicked64@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "yggdrasil_engine" }
]
include = [
    "yggdrasil_engine/lib/*"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
tox = "^4.0.0"

[tool.poetry.build]
generate-setup-file = false

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
