[package]
name = "python-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_sdk"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
sdk-core = {path = "../sdk-core"}
serde_json = "1.0.68"


[dependencies.serde]
features = ["derive"]
version = "1.0"