[package]
edition = "2021"
name = "python-sdk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "python_sdk"

[dependencies]
pyo3 = {version = "0.17.1", features = ["extension-module"]}
serde_json = "1.0.68"
unleash-yggdrasil = {path = "../unleash-yggdrasil"}
unleash-types = "0.7.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"
