[package]
name = "rule-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
pest_consume = "1.1.3"
semver = "1.0.5"
murmur3 = "0.5.1"
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "2.2.2"