[package]
edition = "2021"
name = "sdk-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
murmur3 = "0.5.1"
ipnet = "2.3.1"
rand = "0.8.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
test-case = "2.2.2"