[package]
edition = "2021"
name = "sdk-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
murmur3 = "0.5.1"
ipnet = "2.3.1"
rand = "0.8.4"
reqwest = "0.11.12"
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4.0"
semver = "1.0.5"
convert_case = "0.6.0"
unleash-types = "0.3.0"
chrono = "0.4.23"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
test-case = "2.2.2"
async-std = "1.0.1"
async-std-test = "0.0.4"
