[package]
edition = "2021"
name = "unleash-yggdrasil"
version = "0.13.0"
description = "This is the Unleash SDK domain logic extracted into a library to facilitate building your own Unleash SDKs in anything, anywhere."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.99"
murmur3 = "0.5.2"
ipnet = "2.8.0"
rand = "0.8.5"
pest = "2.0"
pest_derive = "2.0"
lazy_static = "1.4.0"
semver = "1.0.17"
convert_case = "0.6.0"
unleash-types = "0.13.0"
chrono = "0.4.38"
dashmap = "5.5.0"
hostname = "0.3.1"
ipnetwork = "0.20.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
test-case = "3.1.0"
async-std = "1.0.1"
async-std-test = "0.0.4"
criterion = "0.5.1"
proptest = "1.2.0"

[[bench]]
name = "benchmark"
harness = false
