[package]
edition = "2021"
name = "unleash-yggdrasil"
version = "0.17.5"
description = "This is the Unleash SDK domain logic extracted into a library to facilitate building your own Unleash SDKs in anything, anywhere."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wall-clock"]
wall-clock = ["chrono/clock", "chrono/wasmbind"]

[dependencies]
serde_json = "1.0.135"
murmur3 = "0.5.2"
ipnet = "2.10.1"
rand = "0.9.1"
pest = "2.7.15"
pest_derive = "2.7.15"
lazy_static = "1.5.0"
semver = "1.0.24"
convert_case = "0.6.0"
unleash-types = {version = "0.15.11", default-features = false}
chrono = { version = "0.4.40", default-features = false, features = ["serde", "std"] }
dashmap = "6.1.0"
hostname = { version = "0.4.0", optional = true }
ipnetwork = "0.21.0"
ahash = "0.8.12"
hashbrown = "0.15.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
test-case = "3.3.1"
async-std = "1.13.0"
async-std-test = "0.0.4"
criterion = "0.5.1"
proptest = "1.6.0"
serial_test = "3.2.0"

[[bench]]
name = "benchmark"
harness = false
