[package]
edition = "2021"
name = "unleash-yggdrasil"
version = "0.20.2"
description = "This is the Unleash SDK domain logic extracted into a library to facilitate building your own Unleash SDKs in anything, anywhere."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["wall-clock"]
wall-clock = ["chrono/clock", "chrono/wasmbind"]

[dependencies]
serde_json = "1.0.145"
murmur3 = "0.5.2"
ipnet = "2.11.0"
rand = "0.9.2"
pest = "2.8.3"
pest_derive = "2.8.3"
lazy_static = "1.5.0"
semver = "1.0.27"
convert_case = "0.8.0"
unleash-types = {version = "0.15.22", default-features = false}
chrono = { version = "0.4.42", default-features = false, features = ["serde", "std"] }
dashmap = "6.1.0"
hostname = { version = "0.4.1", optional = true }
ipnetwork = "0.21.0"
ahash = "0.8.12"
hashbrown = "0.16.0"
regex = "1.12.3"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
test-case = "3.3.1"
async-std = "1.13.2"
async-std-test = "0.0.4"
criterion = "0.7.0"
proptest = "1.8.0"
serial_test = "3.2.0"

[[bench]]
name = "benchmark"
harness = false
