[package]
authors = ["sighphyre <simon@getunleash.io>"]
description = "Direct bindings to the Yggdrasil grammar for NodeJS"
edition = "2018"
license = "MIT"
name = "yggdrasil-engine"
repository = "https://github.com/unleash/yggdrasil"
version = "0.1.0-beta.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
unleash-yggdrasil = {path = "../unleash-yggdrasil"}
wasm-bindgen = "0.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = {version = "0.1.6", optional = true}

serde = {version = "1.0.190", features = ["derive"]}
serde-wasm-bindgen = "0.6.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
