[package]
name = "yggdrasil-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unleash-yggdrasil = { path = "../unleash-yggdrasil" }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
unleash-types = { version = "0.15.11", default-features = false }
