[package]
edition = "2021"
name = "yggdrasilffi"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "yggdrasilffi"

[dependencies]
libc = "0.2"
chrono = "0.4.40"
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
unleash-types = {path = "../../unleash-domain/unleash-types-rs", default-features = false}
unleash-yggdrasil = {path = "../unleash-yggdrasil"}
