[package]
name = "yggdrasil-engine"
version = "0.3.0"
authors = ["sighphyre <simon@getunleash.io>"]
repository = "https://github.com/unleash/yggdrasil"
description = "Direct WASM bindings to the Yggdrasil engine"
edition = "2018"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
unleash-types = "0.14.0"
unleash-yggdrasil = {path = "../unleash-yggdrasil"}
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

serde = { version = "1.0.190", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
