[package]
name = "java-glue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.19.0"
sdk-core = {path = "../../sdk-core"}
serde_json = "1.0.68"
unleash-types = "0.3.0"

[lib]
crate_type = ["cdylib"]